GNOME Bugzilla – Bug 722622
d3dvideosink: Unable to register Direct3D hidden window class
Last modified: 2014-02-04 15:53:44 UTC
Created attachment 266764 [details] [review] Patch that fixes the problem It's impossible to create another pipeline with d3dvideosink after disposing the previous one due to some problem in d3dvideosink. The message is: "Unable to register Direct3D hidden window class". I've evaluated the problem and it's that UnregisterClass() in working thread is called before DestroyWindow() and UnregisterClass() does nothing. The patch is applied.
Please provide patches in "git format-patch" format in the future :) Will backport to 1.2 later. commit d96999328ad80941fbdb51f64d46fa540463ca62 Author: Alexey Chernov <4ernov@gmail.com> Date: Tue Jan 21 09:44:00 2014 +0100 d3dvideosink: First destroy the window, then unregister the class It's impossible to create another pipeline with d3dvideosink after disposing the previous one due to some problem in d3dvideosink. The message is: "Unable to register Direct3D hidden window class". I've evaluated the problem and it's that UnregisterClass() in working thread is called before DestroyWindow() and UnregisterClass() does nothing. https://bugzilla.gnome.org/show_bug.cgi?id=722622
Thanks for committing, Sebastian! Sorry for patch format, was too hurry to publish the fix and forgot about git format-patch :) I remember about it usually.